--- a/index.html
+++ b/index.html
@@ -43,21 +43,23 @@
         <div class="container">
             <div class="sub-container" id="about"></div>
             <h1>About</h1>
-            <p>
-                *This is a fictitious website made for a practice of web programming.<br />
-                The origine was an auxiliary website dedicated for the remote-joint course &quot;<a href="https://gc.sfc.keio.ac.jp/cgi/class/class_top.cgi?2011_31589+e" target="_blank">Asia Workshop 2011</a>&quot; organized by Keio University and Kyoto University in 2011.
-            </p>
-            <h2>Course Description</h2>
-            <p>
-                Asia and Japan are inseparable. Although Japanese history has many discord and coflicts among the Asian nations, the problems we face now suggest that there is so much more to share to let the past interfere with the efforts for policy collaborations.<br />
-                Through discussions about Asia studies, course takers are expected to recognize the deep relationship of Asia and themselves.
-            </p>
-            <p>Note: Whole sessions will be conducted in English.</p>
-            <h2>Feature: Remote collaboration</h2>
-            <p>
-                Keio University and Kyoto university's collaborative course is going into the 3rd season. We offer the course with sort of remote conference system. This enables the distant learning and discussions which means that we can have opportunities to share rich knowledge and fieldwork case studies of both Keio and Kyoto university exceeding the limit of distance.<br />
-                Attendees will experience not only the special speakers' lectures but also interchange between mutual university students. We want students to take advantage of the course with active discussions.
-            </p>
+            <div class="text-adjust">
+                <p>
+                    *This is a fictitious website made for a practice of web programming.<br />
+                    The origine was an auxiliary website dedicated for the remote-joint course &quot;<a href="https://gc.sfc.keio.ac.jp/cgi/class/class_top.cgi?2011_31589+e" target="_blank">Asia Workshop 2011</a>&quot; organized by Keio University and Kyoto University in 2011.
+                </p>
+                <h2>Course Description</h2>
+                <p>
+                    Asia and Japan are inseparable. Although Japanese history has many discord and coflicts among the Asian nations, the problems we face now suggest that there is so much more to share to let the past interfere with the efforts for policy collaborations.<br />
+                    Through discussions about Asia studies, course takers are expected to recognize the deep relationship of Asia and themselves.
+                </p>
+                <p>Note: Whole sessions will be conducted in English.</p>
+                <h2>Feature: Remote collaboration</h2>
+                <p>
+                    Keio University and Kyoto university's collaborative course is going into the 3rd season. We offer the course with sort of remote conference system. This enables the distant learning and discussions which means that we can have opportunities to share rich knowledge and fieldwork case studies of both Keio and Kyoto university exceeding the limit of distance.<br />
+                    Attendees will experience not only the special speakers' lectures but also interchange between mutual university students. We want students to take advantage of the course with active discussions.
+                </p>
+            </div>
         </div>
     </div>
     <div class="schedule-wrapper">
@@ -234,50 +236,52 @@
         <div class="container">
             <div class="sub-container" id="assignment"></div>
             <h1>ASSIGNMENT</h1>
-            <p>
-                Create a content relating to Asia.<br />
-                Here are suggested themes for the assignment:
-            </p>
-            <ul>
-                <li>What I wish Asia to be</li>
-                <li>What Japan can do in Asia, for Asia and with Asia</li>
-                <li>Japan in Asia, and/or Asia in Japan</li>
-                <li>Learn xxx from Asia</li>
-            </ul>
-            <p>
-                Each course taker can choose a type of content from following options:
-            </p>
-            <ul>
-                <li>Video (5 minutes or less) and one page annotation (A4)</li>
-                <li>Collage of still photos and one page annotation (A4)</li>
-                <li>Paper (A4, 5-8 pages + references)</li>
-            </ul>
-            <p>
-                NOTE: Course takers have to prepare for the final presentation. We hope the students to discuss lively including the people at the remote site.<br />
-                The details about the format of presentation will be announced later.
-            </p>
+            <div class="text-adjust">
+                <p>
+                    Create a content relating to Asia.<br />
+                    Here are suggested themes for the assignment:
+                </p>
+                <ul>
+                    <li>What I wish Asia to be</li>
+                    <li>What Japan can do in Asia, for Asia and with Asia</li>
+                    <li>Japan in Asia, and/or Asia in Japan</li>
+                    <li>Learn xxx from Asia</li>
+                </ul>
+                <p>
+                    Each course taker can choose a type of content from following options:
+                </p>
+                <ul>
+                    <li>Video (5 minutes or less) and one page annotation (A4)</li>
+                    <li>Collage of still photos and one page annotation (A4)</li>
+                    <li>Paper (A4, 5-8 pages + references)</li>
+                </ul>
+                <p>
+                    NOTE: Course takers have to prepare for the final presentation. We hope the students to discuss lively including the people at the remote site.<br />
+                    The details about the format of presentation will be announced later.
+                </p>
+            </div>
         </div>
-    </div>
     <div class="link-wrapper">
         <div class="container">
             <div class="sub-container" id="links"></div>
             <h1>LINKS</h1>
-            <ul>
-                <li><a href="https://gc.sfc.keio.ac.jp/cgi/class/class_top.cgi?2011_31589+e" target="_blank">Course Archive (Keio Global Campus)</a></li>
-                <li>
-                    <a href="https://www.keio.ac.jp/en/" target="_blank">Keio University</a><br />
-                    - <a href="https://www.sfc.keio.ac.jp/gsmg/en/" target="_blank">Graduate School of Media and Governance</a>
-                    <br />
-                    - <a href="https://www.kmd.keio.ac.jp/" target="_blank">Graduate School of Media Design</a>
-                </li>
-                <li>
-                    <a href="https://www.kyoto-u.ac.jp/en/" target="_blank">Kyoto University</a><br />
-                    - <a href="https://en.kyoto.cseas.kyoto-u.ac.jp/" target="_blank">Center for Southeast Asian Studies</a>
-                </li>
+            <div class="text-adjust">
+                <ul>
+                    <li><a href="https://gc.sfc.keio.ac.jp/cgi/class/class_top.cgi?2011_31589+e" target="_blank">Course Archive (Keio Global Campus)</a></li>
+                    <li>
+                        <a href="https://www.keio.ac.jp/en/" target="_blank">Keio University</a><br />
+                        - <a href="https://www.sfc.keio.ac.jp/gsmg/en/" target="_blank">Graduate School of Media and Governance</a>
+                        <br />
+                        - <a href="https://www.kmd.keio.ac.jp/" target="_blank">Graduate School of Media Design</a>
+                    </li>
+                    <li>
+                        <a href="https://www.kyoto-u.ac.jp/en/" target="_blank">Kyoto University</a><br />
+                        - <a href="https://en.kyoto.cseas.kyoto-u.ac.jp/" target="_blank">Center for Southeast Asian Studies</a>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </div>
-    </div>
     <footer>
         <div class="container">
             <p><a href="index.html">Asia Workshop 2011</a> all rights researved.</p>
