--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-﻿<!-- https://web.archive.org/web/20170829101727/http://g-edu.kmd.keio.ac.jp/asiaws2011/about.html -->
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset="utf-8" />
