--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h1>About</h1>
             <div class="text-adjust">
                 <p>
-                    *This is a fictitious website made for a practice of web programming.<br />
-                    The origine was an auxiliary website dedicated for the remote-joint course &quot;<a href="https://gc.sfc.keio.ac.jp/cgi/class/class_top.cgi?2011_31589+e" target="_blank">Asia Workshop 2011</a>&quot; organized by Keio University and Kyoto University in 2011.
+                    <i>*This is a fictitious website made for a personal practice of web programming.<br />
+                    The origine was an auxiliary website dedicated for the remote-joint course &quot;<a href="https://gc.sfc.keio.ac.jp/cgi/class/class_top.cgi?2011_31589+e" target="_blank">Asia Workshop 2011</a>&quot; organized by Keio University and Kyoto University in 2011.</i>
                 </p>
                 <h2>Course Description</h2>
                 <p>
